golang/ergo/script/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gozero-mis-frontend
  name: gozero-mis-frontend-svc
  namespace: gozero
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gozero-mis-frontend
  type: NodePort
status:
  loadBalancer: {}
